src/tests/fixtures/type_definitions_from_interface/TagAttachedToWrongNode.ts.expected
-----------------
INPUT
----------------- 
/** @GQLType */
function MyFunc() {}

-----------------
OUTPUT
-----------------
src/tests/fixtures/type_definitions_from_interface/TagAttachedToWrongNode.ts:1:5 - error: `@GQLType` can only be used on class or interface declarations.

1 /** @GQLType */
      ~~~~~~~~~
